# elten3

./: .gitignore  CMakeLists.txt  CMakePresets.json  Gemfile  elten.rb  filelist  readme.md
.github/workflows/: release.yml
cmake/: EltenRubyRuntime.cmake  generate_build_info_header.cmake  generate_stamp_secret_header.cmake  macos_bundle.cmake  prepare_ruby_runtime.cmake  windows_bundle.cmake
launcher/installer/: inst_elten.iss
launcher/src/: blake3.hpp  embedded_assets.hpp  launcher.cpp  launcher_facade_windows.cpp  platform.h  platform_osx.cpp  platform_windows.cpp  sha256.hpp  stamp.cpp  stamp.hpp
launcher/tools/: generate_assets.cpp
locale/: elten.pot
locale/de-DE/LC_MESSAGES/: elten.mo  elten.po
locale/de-DE/changelog/: 2_5_2_3.md  2_5_2_4.md  2_5_2_5.md  2_5_2_6.md  2_5_2_7.md
locale/en-GB/: faq.md
locale/en-GB/changelog/: 2_5_2_4.md  2_5_2_5.md  2_5_2_6.md  2_5_2_7.md
locale/es-PA/LC_MESSAGES/: elten.mo  elten.po
locale/fr-FR/LC_MESSAGES/: elten.mo
locale/hr-HR/LC_MESSAGES/: elten.mo
locale/lt-LT/LC_MESSAGES/: elten.mo
locale/pl-PL/: faq.md
locale/pl-PL/LC_MESSAGES/: elten.mo  elten.po
locale/pl-PL/changelog/: 2_5_2_4.md  2_5_2_5.md  2_5_2_6.md
locale/pt-BR/LC_MESSAGES/: elten.mo
locale/ro-RO/LC_MESSAGES/: elten.mo  elten.po
locale/ru-RU/: invisibleinterface.md  privacypolicy.md  readme.md  rules.md
locale/ru-RU/LC_MESSAGES/: elten.mo  elten.po
locale/ru-RU/changelog/: 2_5_2_3.md
locale/tr-TR/LC_MESSAGES/: elten.mo  elten.po
nvda/elten/: manifest.ini
nvda/elten/globalPlugins/: elten.py
patchs/: mini_portile_msys_path_patch.rb
resources/: langs.json  locations.json  program-signing-root.pem
src/: bootstrap.rb  main.rb
src/eapi/: __eapi.rb  activityreports.rb  audio3d.rb  audioeditor.rb  bass.rb  common.rb  conference.rb  conferencecore.rb  conferencenative.rb  controls.rb  dictionary.rb  documents.rb  eltensrv.rb  external.rb  html.rb  http.rb  invisibleinterface.rb  keyboard.rb  log.rb  mainmenu.rb  network.rb  notificationgroups.rb  notifications.rb  opus.rb  program.rb  programsigning.rb  quickactions.rb  recorder.rb  resources.rb  runner.rb  sound.rb  speech.rb  speechoutput.rb  speechtofile.rb  speexdsp.rb  steamaudio.rb  structs.rb  tls.rb  ui.rb
src/eapi/audio/: bass.rb  mediaextractors.rb  oggvorbis.rb  opus.rb  recorder.rb  sound.rb  speexdsp.rb  steamaudio.rb
src/eapi/audio/encoders/: base.rb  media.rb  ogg.rb  opus.rb  vorbis.rb  wave.rb
src/eapi/audio/fx/: audio3d.rb
src/eapi/common/: __common.rb  activity.rb  console.rb  diagnostics.rb  feed.rb  hrtf.rb  input.rb  license.rb  media.rb  platform.rb  premium.rb  soundthemes.rb  threads.rb  url.rb  user_menu.rb  voice.rb
src/eapi/core/: base.rb  cache.rb  configuration.rb  configuration_migrations.rb  configuration_values.rb  local_config.rb  runtime.rb
src/eapi/eltensrv/: __eltensrv.rb  attachments.rb  blogs.rb  bugs.rb  calls.rb  client.rb  contacts.rb  feeds.rb  honors.rb  monitors.rb  notifications.rb  profiles.rb  system.rb  users.rb
src/eltenlink/: __eltenlink.rb  accounts.rb  activities.rb  admins.rb  apps.rb  attachments.rb  auctions.rb  authentication.rb  bans.rb  blog.rb  calendars.rb  calls.rb  client.rb  conferenceresources.rb  contacts.rb  error.rb  feeds.rb  forum.rb  honors.rb  messages.rb  monitors.rb  notes.rb  notifications.rb  payments.rb  polls.rb  premiumpackages.rb  profiles.rb  soundthemes.rb  system.rb  users.rb  voip.rb
src/ri/: __ri.rb  nativestructs.rb  runtimepaths.rb
src/scenes/: account.rb  admins.rb  auctions.rb  authentication.rb  ban.rb  blog.rb  calendar.rb  callhistory.rb  changes.rb  clock.rb  conference.rb  console.rb  contacts.rb  debug.rb  documentation.rb  faq.rb  feedviewer.rb  forgotpassword.rb  forum.rb  honors.rb  iikeys.rb  install.rb  loading.rb  log.rb  login.rb  main.rb  messages.rb  notes.rb  notifications.rb  online.rb  piano.rb  player.rb  polls.rb  premiumpackages.rb  programs.rb  registration.rb  settings.rb  sounds.rb  soundthemes.rb  speedtest.rb  (+8 more)
src/ui/: __ui.rb  calls.rb  dialogs.rb  form.rb  input.rb  loop.rb  time.rb
src/ui/controls/: __controls.rb  button.rb  calendar_grid.rb  check_box.rb  date_button.rb  edit_box.rb  files_tree.rb  form_field.rb  grid_box.rb  list_box.rb  map.rb  menu.rb  opus_record_button.rb  player.rb  static.rb  table_box.rb  tree.rb
tools/: build-eltenapp.rb  build-eltsetup.rb  build-osx-arm64.sh  build-osx.sh  build-windows-arm64.bat  build-windows-x64.bat  build-windows-x86.bat  build-windows.bat  find-cmake-2026.bat  generate-pot.rb  normalize-line-endings.rb  program-certificates.rb
